--- a/bingoGenerator/index.html
+++ b/bingoGenerator/index.html
@@ -12,20 +12,29 @@
 
 </head>
 
-<body onload="newCard()">
+<body>
 
 	<div id="container">
 		<div id="content">
 
 			<h1 id="number">00</h1>
 			
-			<button class="btn">Nytt nummer</button>
+			<!-- <button class="btn">Nytt nummer</button> -->
 
-			<p id="numbers"></p>
-			<script type="text/javascript" src="bingo.js"></script>
+			<div id="all">
+				<p id="numbers"></p>
+			</div>
+
+
 		</div>
+		<p id="drawn">0</p>
+
+
 	</div>
 
+
+
+	<script type="text/javascript" src="bingo.js"></script>
 
 </body>
 
